--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-smartcontract-lottery",
+  "name": "nextjs-smartcontract-lottery-fcc",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.4"
-  }
+    "@walletconnect/ethereum-provider": "^2.9.1",
+    "@walletconnect/modal": "^2.6.0",
+    "@web3uikit/core": "^0.1.5",
+    "@web3uikit/icons": "^0.1.5",
+    "@web3uikit/web3": "^0.1.5",
+    "autoprefixer": "10.4.14",
+    "magic-sdk": "^17.1.3",
+    "moralis": "^1.3.2",
+    "moralis-v1": "^1.12.0",
+    "next": "13.3.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-moralis": "^1.3.1",
+    "web3uikit": "^0.1.75"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
